# commit-agent

./: .gitignore  README.md  eval_agent_jsonl.py  eval_commit_classifier.py  my-task.txt  pyproject.toml  quickstart.md  run_task.py
data/: eval_50_each.jsonl  eval_full.jsonl  eval_small.jsonl  eval_small_resampled.jsonl  eval_small_resampled_v2.jsonl  eval_small_resampled_v3.jsonl  eval_small_resampled_v3_feat.jsonl  kernel_fix_feat_150_each.jsonl
minimal_agent/: __init__.py  agent.py  commit_labels.py  config.py  main.py  model.py  policy.py  project.py  prompt.py  sanitize.py  types.py
minimal_agent/analysis/: __init__.py  service.py
minimal_agent/lsp/: __init__.py  client.py  server.py
minimal_agent/runtime/: __init__.py  compact.py  doom.py  loop.py  retry.py  state.py  todo.py  verify.py
minimal_agent/session/: __init__.py  store.py  summary.py
minimal_agent/tool/: __init__.py  bash.py  edit.py  git_commit.py  git_read_file.py  glob.py  grep.py  list.py  lsp.py  multiedit.py  patch.py  rag.py  read.py  registry.py  search.py  static_analysis.py  task.py  todo.py  write.py
